--- a/settings/config.json.sample
+++ b/settings/config.json.sample
@@ -1,6 +1,6 @@
 {
-  "token": "",
-  "cmd_prefix": ">",
+  "token": "MzQzOTMwMjExODc3NzgxNTA2.DQn1wA.JGA_AcDWd1L4F7ivX8tk_9Dw3js",
+  "cmd_prefix": "=",
   "customcmd_prefix": ".",
   "bot_identifier": ":robot:"
 }
